# llvmTutorial

./: .gitignore  CApp.cpp  CApp.h  CMakeLists.txt  README.md  main.cpp
AST/: abstract.cpp  abstract.h  binaryAST.h  callAST.h  functionAST.h  numberAST.h  prototypeAST.h  variableAST.h
ltools/: ltools.cpp  ltools.h
mytools/: getopt.c  getopt.h
